v 0.2.5
- update debian package info only, no code changes
v 0.2.2
- open files read-only when changes not needed (so we can have root-owned system data files!)
- create Debian package via 'make deb'
v 0.2.1
- able to be installed and run from any dir
- savegames now reside in ~/.local/share/ironseed or ~/.ironseed !
v 0.2.0
- build: allow installing game to final location
- code: use TMPDIR for temp files
- build: scripts to regenerate last of data/* binary files
v 0.1.9
- Makefile: regenerate most .cpr images from .png
- image conversion tools handle .tga & .cpr files without embedded PAL and with different sizes, and partial PAL support
- restore some easter eggs
- restore some missing logs
- restore some missing conversation parts
v 0.1.8
- fix endgame running without pause to read text!
- fix bug with removing wrong items sometimes!
- fixed incorrect highlighting and leftover chars in logs sometimes
- fix issue when >255 items of some type
- allow skipping of slow "Approaching planet" countdowns
v 0.1.7
- fix Security / Masking so it behaves more like the manual says
- fix memory corruption in trade()
- code: verify bounds for move() and fillscreen() when acccessing screen[]
- shield/weapon arming/disarming and panic button rework, also fix its status on loadgame
- docs: more events/logs system documenting
- code: use constants for alert mode, cleanup whitespace
v 0.1.6
- fix bugs in logic deciding when aliens attack
- fix bugs with Sengzhac log not showing and not being able to scroll over it
- docs: document events/logs system
- fix race condition when installing/removing shield
- fix cargo skip of weight check for some items
- code: use constants for delayes, shiptypes, jobtypes, wandering alien action/orders and cargo items to further improve readability
- combat: fix alien (with reflective hull) damage calculations
v 0.1.5
- combat: various shield handling fixes
- code: use constants instead of numbers for few types to improve readability