@@ -1,3 +1,4 @@
+- fix wrong diskfree calculation leading to failing to find tempdir/savedir
 v 0.2.5
 - update debian package info only, no code changes
 v 0.2.2
